Fixed some UI and dark mode

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     --max-width-main: 800px;
     --max-width-main-mobile: 320px;
 
+    --font-back-color: #e8dddd;
+
     --font-color: black;
     --background-color: white;
     --link-color: green;
@@ -76,6 +78,20 @@ nav {
 }
 .navContext {
     width: 100%;
+}
+
+.comaToHlList {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.comaToHlList div {
+    background-color: var(--font-back-color);
+    border-radius: 2rem;
+    padding: 0.5rem;
+    margin: 0.3rem 0.5rem;
+    margin-left: 0;
+    word-break: break-all;
 }
 
 @media only screen and (max-width: 820px) {
